[project]
name = "predictive_state_updates"
version = "0.1.0"
description = "predictive_state_updates using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
]

[project.scripts]
kickoff = "predictive_state_updates.main:kickoff"
run_crew = "predictive_state_updates.main:kickoff"
plot = "predictive_state_updates.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
